<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:paddingTop="6dip"
        android:paddingBottom="8dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!--
	   <Button android:id="@+id/StopAllButton" android:text="Stop"
	       android:layout_width="wrap_content"
	       android:layout_height="40dip"/> -->
        <Button android:id="@+id/StartAllButton" android:text="@string/Start"
            android:layout_width="65dip"
            android:paddingLeft="6dip"
            android:layout_height="40dip"/>
        <Button android:id="@+id/PauseButton" android:text="@string/Pause"
            android:layout_width="wrap_content"
            android:paddingLeft="6dip"
            android:layout_height="40dip"
            android:layout_toRightOf="@+id/StartAllButton"/>
        <TextView android:id="@+id/elapsedTime"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:paddingTop="6dip"
            android:paddingLeft="6dip"
            android:layout_toRightOf="@+id/PauseButton"
            android:layout_height="wrap_content"  />

        <ImageView
            android:id="@+id/settings"
            android:contentDescription="@string/Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:clickable="true"
            android:focusable="true"
            android:paddingTop="8dip"
            android:paddingRight="8dip"
            android:paddingBottom="8dip"
            android:src="@drawable/gear26"/>

        <ImageView
            android:id="@+id/satellitedata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="false"
            android:layout_toLeftOf="@id/settings"
            android:clickable="true"
            android:contentDescription="@string/Sat_data"
            android:focusable="true"
            android:paddingBottom="8dip"
            android:paddingRight="8dip"
            android:paddingTop="8dip"
            android:src="@drawable/radar26" />

    </RelativeLayout>

    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:paddingBottom="6dip"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent" />

    <ScrollView android:id="@+id/ScrollView11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <TableLayout android:id="@+id/score_table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            android:padding="6dip"
            android:background="@drawable/textviewbackground">
            <TableRow
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground" >
                <TextView
                    android:id="@+id/gpsEnabled"
                    android:text="@string/GPS"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:paddingLeft="6dip"
                    android:paddingTop="6dip"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/gpsEnabledIcon"
                    android:contentDescription="@string/GPS_Icon"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:src="@drawable/redsphere31"/>
                <TextView
                    android:id="@+id/networkEnabled"
                    android:text="@string/Network"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:paddingBottom="6dip"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/networkEnabledIcon"
                    android:contentDescription="@string/Network_Icon"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:src="@drawable/redsphere31"/>
                <TextView
                    android:id="@+id/criteriaEnabled"
                    android:text="@string/Criteria"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:paddingLeft="6dip"
                    android:paddingBottom="6dip"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/criteriaEnabledIcon"
                    android:contentDescription="@string/Criteria_Icon"
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:src="@drawable/redsphere31"/>
            </TableRow>

            <TableRow android:id="@+id/bestAvailableInfoTableRow"
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/bestAvailableInfo"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:paddingLeft="6dip"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip" />
                <ImageView
                    android:id="@+id/bestAvailableImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:contentDescription="@string/bestAvailableImageView"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="8dip"
                    android:src="@drawable/greendiamond18" />
            </TableRow>

            <TableRow android:id="@+id/cachedNetworkProviderTableRow"
                android:layout_width="fill_parent"
                android:clickable="true"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/cachedNetworkProvider"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:paddingLeft="6dip"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip"
                    android:layout_height="wrap_content"  />
                <ImageView
                    android:id="@+id/greenDiamond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:contentDescription="@string/greenDiamond"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="8dip"
                    android:src="@drawable/greendiamond18" />
            </TableRow>
            <TableRow android:id="@+id/cachedGPSTableRow"
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/cachedGPS"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:paddingLeft="6dip"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip"
                    android:layout_height="wrap_content"  />
                <ImageView
                    android:id="@+id/redDiamond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:contentDescription="@string/redDiamond"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="8dip"
                    android:src="@drawable/reddiamond18" />
            </TableRow>
            <TableRow android:id="@+id/networkLocationProviderTableRow"
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/networkLocationProvider"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:padding="6dip"
                    android:layout_height="wrap_content"  />
                <ImageView
                    android:id="@+id/blueCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:contentDescription="@string/blueCircle"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="8dip"
                    android:src="@drawable/bluecircle18" />
            </TableRow>
            <TableRow android:id="@+id/gpsLocationProviderTableRow"
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/gpsLocationProvider"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:padding="6dip"
                    android:layout_height="wrap_content"  />
                <ImageView
                    android:id="@+id/redCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:focusable="true"
                    android:contentDescription="@string/redCircle"
                    android:layout_gravity="center_vertical"
                    android:paddingBottom="8dip"
                    android:paddingRight="8dip"
                    android:paddingTop="8dip"
                    android:src="@drawable/redcircle18" />
            </TableRow>
            <TableRow android:id="@+id/allLcationProvidersTableRow"
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/allLocationProviders"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:padding="6dip"
                    android:layout_height="wrap_content"  />
            </TableRow>
            <TableRow android:id="@+id/bestLcationProvidersTableRow"
                android:layout_width="fill_parent"
                android:padding="6dip"
                android:layout_marginBottom="6dip"
                android:background="@drawable/textviewbackground">
                <TextView android:id="@+id/bestLocationProviders"
                    android:layout_width="fill_parent"
                    android:textSize="14sp"
                    android:padding="6dip"
                    android:layout_height="wrap_content"  />
            </TableRow>

        </TableLayout>

    </ScrollView>


</LinearLayout>
